[gd_scene load_steps=4 format=3 uid="uid://c2d3e4f5g6h7i8j9"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_1"]
[ext_resource type="Texture2D" path="res://icon.svg" id="2_1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.6, 0.3, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6
texture = ExtResource("2_1")
modulate = Color(0.1, 0.4, 0.2, 1)

[node name="BackgroundOverlay" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "The Lorax's Quest"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.4, 0.1, 1)
theme_override_constants/outline_size = 4

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 50.0
offset_right = 120.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_font_sizes/font_size = 32
text = "Start Demo"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
autoplay = false
